# KelmaMobile

./: .eslintignore  .gitignore  .gitmodules  App.tsx  CONTRIBUTING.md  KelmaCore.podspec  README.md  SECURITY.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
docs/: ARCHITECTURE.md  PORTING.md  THIRD_PARTY_NOTICES.md  android-release.md  ios-media-sync-fix.md  ios-release.md  ios-rnsound-fix.md  kelma-direct-signing-certificate.pem
ios/: Podfile
ios/KelmaCore/: RCTNativeKelmaCore.h  RCTNativeKelmaCore.mm  RCTNativeKelmaShare.h  RCTNativeKelmaShare.mm
ios/KelmaMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  PrivacyInfo.xcprivacy
ios/KelmaMobile.xcodeproj/: project.pbxproj
ios/KelmaMobile.xcworkspace/: contents.xcworkspacedata
rust/kelma-core/: Cargo.toml
rust/kelma-core/include/: kelma_core.h
rust/kelma-core/src/: android_jni.rs  lib.rs  session.rs
scripts/: android-device.mjs  build-android-direct.sh  build-rust-for-android.sh  build-rust-for-xcode.sh
specs/: NativeKelmaCore.ts  NativeKelmaShare.ts
src/: config.ts  update.test.ts  update.ts
src/audio/: AudioPlayer.ts
src/core/: KelmaCore.session.test.ts  KelmaCore.test.ts  KelmaCore.ts  Share.ts
src/screens/: AddNoteScreen.tsx  CardDetailScreen.tsx  CardOptionsSheet.tsx  DeckInspectorScreen.tsx  DeckListScreen.tsx  NoteEditorScreen.tsx  ReviewerScreen.test.tsx  ReviewerScreen.tsx  SettingsScreen.tsx  StatisticsScreen.tsx  SyncScreen.tsx  (+4 more)
(+25 files in other folders)
